--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	</P1>
 	<div class="team">
 		<div class="member">
-			<img src="C:\Users\gopim\Desktop\songs\LAMYAAAAAAAAAAAAAAA.jpg" alt="Member 1" onclick="showBio(1)">
+			<img src="./LAMYAAAAAAAAAAAAAAA.jpg" alt="Member 1" onclick="showBio(1)">
 			<h3>Ramya Somasi</h3>
 			<div class="bio" id="bio1">
 				<span class="close" onclick="hideBio(1)">&times;</span>
@@ -158,7 +158,7 @@
 			</div>
 		</div>
 		<div class="member">
-			<img src="C:\Users\gopim\Desktop\songs\laaahaaaaaathhhhhhhhhhhh.jpg" alt="Member 2" onclick="showBio(2)">
+			<img src="./laaahaaaaaathhhhhhhhhhhh.jpg" alt="Member 2" onclick="showBio(2)">
             <h3>Raahath Shaik</h3>
 			<div class="bio" id="bio2">
 			   <span class="close" onclick="hideBio(2)">&times;</span>
@@ -167,7 +167,7 @@
 			</div>
 		</div>
 		<div class="member">
-			<img src="C:\Users\gopim\Pictures\Screenshots\jahahahahahahahha.jpg" alt="Member 3" onclick="showBio(3)">
+			<img src="./jahahahahahahahha.jpg" alt="Member 3" onclick="showBio(3)">
             <h3>Jahnavi Vadyala</h3>
 			<div class="bio" id="bio3">
 			   <span class="close" onclick="hideBio(3)">&times;</span>
