--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <img src="C:\Users\gopim\OneDrive\Pictures\Camera Roll\IMG-20230406-WA0020.jpg"alt="collage">
+        <img src="collage.jpg"alt="collage">
     </body>
 
 
